<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/app_name"
        android:fontFamily="@font/comfortaa_bold"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/about_app_text"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/developer"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:text="@string/year"
        android:textSize="35sp"
        android:gravity="center"/>

</LinearLayout>