<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_gravity="center"
        android:layout_weight="1.6"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:gravity="center">

        <androidx.cardview.widget.CardView
           android:layout_width="200dp"
           android:layout_height="200dp"
           app:cardCornerRadius="45dp"
           android:layout_gravity="center">

           <ImageView
               android:id="@+id/appLogo_menuF"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:scaleType="centerCrop"
               android:layout_gravity="center"
               android:contentDescription="@string/app_name"
               app:srcCompat="@drawable/imege"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/appName_menuF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14pt"
            android:fontFamily="@font/comfortaa_bold"
            android:textColor="@color/white"
            android:text="@string/app_name"
            android:layout_marginTop="-10dp"
            android:layout_marginBottom="40dp"/>

        <Button
            android:background="@drawable/button"
            android:id="@+id/btn_choose_menuF"
            android:layout_width="250dp"
            android:textAllCaps="false"
            android:layout_height="70dp"
            android:visibility="visible"
            android:fontFamily="@font/comfortaa_semibold"
            android:text="@string/choose"
            android:gravity="center"
            android:textColor="#FFBBBBBB"
            android:textSize="22sp"
            android:layout_margin="30dp"/>

        <Button
            android:textAllCaps="false"
            android:background="@drawable/button"
            android:id="@+id/btn_about_menuF"
            android:layout_width="250dp"
            android:fontFamily="@font/comfortaa_semibold"
            android:layout_height="70dp"
            android:textColor="#FFBBBBBB"
            android:visibility="visible"
            android:textSize="22sp"
            android:text="@string/about_app"/>

    </LinearLayout>

</LinearLayout>